@@ -12,7 +12,6 @@
 #admin_menu li.admin_menu-users img { margin-top: 1px; }
 #admin_menu li.admin_menu-action { float: right; }
 #admin_menu li.admin_menu-action a { border-left: 1px solid #323232; border-right: none; }
-body { margin-top: 20px !important; }
 
 /* all lists */
 #admin_menu, #admin_menu ul { padding: 0; margin: 0; list-style: none; line-height: 1.4em; z-index: 999; }
