@@ -18,6 +18,25 @@ function admin_menu_help($section) {
   switch ($section) {
     case 'admin/modules#description':
       return t('Renders the administer menu tree as dropdown menu at the top of the window.');
+    case 'admin/settings/admin_menu':
+      return t('The Administration Menu will appear at the top of the page for users who have been 
+      given the "access administration menu" permission. Customize appearance of the dropdown menu here.');
+    case 'admin/help#admin_menu':
+      return t(<<<EOT
+<p>Drupal Administration Menu renders all administrative menu items below 'administer' 
+in a clean, attractive and purely CSS-based menu at the top of your website.  It contains 
+not only regular menu items - local tasks are also included, giving you extremely fast 
+access to any administrative resource and function your Drupal installation provides.</p>
+<p>The menu also can display the number of anonymous and authenticated users, 
+<a href="http://drupal.org/project/devel">Devel module</a> links, and items generated by
+other modules.</p>
+<p>The <a href="!settings">settings page</a> is where administrators can choose 
+whether or not to allow the module to shift the page contents down to accommodate
+the menu.  Depending on the design/layout of your theme, this may cause problems with
+the appearance of the page.  Changing the '%margin-setting' setting may fix this
+issue.</p>
+EOT
+, array('!settings' => url('admin/settings/admin_menu'), '%margin-setting' => t('Apply margin-top to page body')));
   }
 }
 
@@ -37,11 +56,37 @@ function admin_menu_perm() {
  * all pages via hook_menu().
  */
 function admin_menu_menu($may_cache) {
-  if (!$may_cache && user_access('access administration menu')) {
+  $items = array();
+  if ($may_cache) {
+    $items[] = array(
+      'path' => 'admin/settings/admin_menu',
+      'title' => t('Administration Menu'),
+      'description' => t('Adjust settings for the dropdown Administration Menu.'),
+      'callback' => 'drupal_get_form',
+      'callback arguments' => array('admin_menu_theme_settings'),
+      'access' => user_access('administer site configuration'),
+    );
+  }
+  elseif (!$may_cache && user_access('access administration menu')) {
     $path = drupal_get_path('module', 'admin_menu');
     drupal_add_css($path .'/admin_menu.css', 'module', 'screen', FALSE);
     drupal_add_js($path .'/admin_menu.js');
+    drupal_add_js(array('admin_menu_margin_top' => variable_get('admin_menu_margin_top', 1)), 'setting');
   }
+  return $items;
+}
+
+/**
+ * Form builder function for module settings.
+ */
+function admin_menu_theme_settings() {
+  $form['admin_menu_margin_top'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Apply margin-top to page body'),
+    '#default_value' => variable_get('admin_menu_margin_top', 1),
+    '#description' => t('If this setting is disabled, some absolute or fixed positioned page elements may be covered by Administration Menu.'),
+  );
+  return system_settings_form($form);
 }
 
 /**
