@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 5.x-2.x, xxxx-xx-xx
 ------------------------------
+#214740 by jjeff, sun: Added module settings to configure margin-top CSS.
 #200737 by sun: Changed admin_menu (fav)icon to use theme setting, if defined.
 #203116 by smk-ka: Improved performance of non-cached admin_menu by storing
   already processed URLs in the cache.
